# AgentOS_Fusion

./: .dockerignore  .env.example  .render.yaml  AgentOS for Dummies (and DevOps).md  Dockerfile  Makefile  README.md  README_RAILWAY.md  docker-compose.yml  package.json  publish.sh  pyproject.toml  railway.json  requirements.txt
.devcontainer/: devcontainer.json
agentos-pessoas/: main.py  railway.json  requirements.txt
agentos-pessoas/db/: mongo_client.py
agentos-pessoas/logs/: logger.py
agentos-pessoas/routes/: __init__.py  integrations.py  profiles.py  roles.py
agentos-pessoas/schemas/: __init__.py  base.py  profile.py  role.py
agentos-pessoas/utils/: __init__.py  (+1 more)
backend/: .env  .env.example  Dockerfile  backend_dotenv.example  pyproject.toml  requirements.txt  start.sh
backend/app/: main.py
backend/app/api/: v1.py
backend/app/api/endpoints/: auth.py  command.py  semantic.py  status.py  websocket.py  whatsapp.py
backend/app/core/: config.py  counters.py  database.py  logging_config.py  repository.py  security.py
backend/app/models/: api_common.py  auth.py  banking.py  delivery.py  finance.py  gateway.py  memory.py  office.py  people.py  sales.py  stock.py  tasks.py  whatsapp.py
backend/app/modules/advisor/: repository.py
backend/app/modules/agreements/: models.py  repository.py  routers.py  services.py
backend/app/modules/banking/: models.py  repository.py  routers.py  services.py
backend/app/modules/delivery/: models.py  repository.py  routers.py  services.py
backend/app/modules/finance/: models.py  routers.py  services.py
backend/app/modules/gateway/: __init__.py  dispatcher.py  routers.py
backend/app/modules/memory/: models.py  repository.py
backend/app/modules/office/: models.py  repository.py  routers.py  services.py  services_audit.py
backend/app/modules/people/: models.py  repository.py  routers.py  services.py
backend/app/modules/sales/: repository.py  routers.py  services.py
backend/app/modules/scheduling/: models.py  repository.py  routers.py  services.py
backend/app/modules/semantic_misc/: people_service.py  sales_service.py
backend/app/modules/stock/: repository.py  routers.py
backend/app/modules/tasks/: models.py  repository.py  routers.py  services.py
backend/app/schemas/: semantic.py
backend/app/services/: embedding_service.py  llm_client.py  mcp_service.py  whatsapp_service.py
backend/app/tools/: basic_actions.py
backend/app/worker/: celery_app.py  tasks_agent.py  tasks_delivery.py  tasks_scheduling.py  tasks_whatsapp.py
backend/core/: config.py
backend/tests/: conftest.py
backend/tests/gateway/: test_dispatcher.py
backend/tests/modules/banking/: test_banking_rollback.py
backend/tests/modules/delivery/: test_delivery_flow.py
backend/tests/modules/sales/: test_sales_api.py
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: .env  README.md  frontend_dotenv.example  tailwind.config.js  vite.config.js
fusion_app/: Dockerfile  Dockerfile.frontend  nginx.conf  package.json  railway.json
promptos_backend/: Dockerfile  gunicorn_conf.py  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: run_tests.sh
(+89 files in other folders)
